# smartfs-tools

./: .gitignore  Changelog.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml  python-tests.yaml
docs/: Smart FS info.odt
source/smartfs_tools/: __init__.py  base.py  script.py  smart.py  smart_high.py
source/tests/: test_base.py  test_script.py  test_smart.py
